# yt_create_v2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py  pipeline_router.py  pipeline_service.py  stage_logger.py
backend/artifact_store/: __init__.py  lineage.py  models.py  sqlite_store.py
backend/domain/: __init__.py  generate_video_request.py  hook.py  narrative_arc.py  narrative_plan.py  pipeline_stage.py  render_spec.py  research_packet.py  review_result.py  scene_script.py  script_brief.py  script_draft.py  script_visual_strategy.py  semantic_scene.py  timed_scene_plan.py  topic_request.py  validation.py  video.py  visual_event_sequence.py  visual_plan.py  voice_track.py
backend/engines/: __init__.py  hook_engine.py  narrative_arc_engine.py  narrative_plan_engine.py  render_engine.py  render_spec_engine.py  research_engine.py  scene_script_engine.py  script_brief_ai_engine.py  script_brief_engine.py  script_draft_engine.py  script_visual_strategy_engine.py  semantic_scene_engine.py  timing_engine.py  visual_event_sequence_engine.py  visual_plan_engine.py
backend/providers/: __init__.py  gemini_provider.py  grok_provider.py  llm_provider.py  media_storage.py  remotion_provider.py  voice_provider.py
backend/registries/: __init__.py  component_registry.py  finance_domain_registry.py
backend/tests/: test_artifact_store.py  test_gemini_provider.py  test_generate_video_request_validator.py  test_grok_provider.py  test_health.py  test_hook_engine.py  test_hook_validator.py  test_llm_provider.py  (+39 more)
(+90 files in other folders)
